language/move-lang/tests/move_check/translated_ir_tests/commands/use_before_assign.move
script {
fun main() {
    let x: u64;
    let y = x;
}
}

// check: COPYLOC_UNAVAILABLE_ERROR
